--- a/cs01.Rmd
+++ b/cs01.Rmd
@@ -25,7 +25,7 @@ library(tidyverse)
 
 # Data
 
--Liz fill in with links as needed to data sources (well data will need to be on Sakai) and data dictionary
+- The data for this case study cannot be shared beyond class participants. Please see Sakai for the data and related documentation, and do not disseminate the data any further.
 
 # Reports
 
@@ -45,7 +45,7 @@ An Introduction to Statistical Learning with Applications in R, James et al (201
 
 [Cross-validation](decks/cs01_2_deck.html)
 
-[Robust regression-Liz to create](decks/cs01_3_deck.html)
+[Robust regression](decks/cs01_3_deck.html)
 
 [Causal inference-Liz to create](decks/cs01_4_deck.html)
 
