--- a/index.Rmd
+++ b/index.Rmd
@@ -24,16 +24,16 @@ markup: "mmark"
 
 | Team member | Office hours | Location |
 | ----------  | ----         | ---- |
-| [Professor Amy Herring](https://stat.duke.edu/people/amy-h-herring)  <a href="mailto:amy.herring@duke.edu" title="email"><i class="fa fa-envelope"></i></a> &nbsp;  | Wed and Thurs 1:30-2:30 | 208 Old Chemistry |
-TA [NEED new](https://www.linkedin.com/in/peter-hase-8092a6b9/) | <a href="mailto:peter.hase@duke.edu" title="email"><i class="fa fa-envelope"></i></a> &nbsp; <a href="https://github.com/peterbhase" title="GitHub"><i class="fa fa-github"></i></a> | Sun 1:00 - 3:00 | Old Chem 211A
-TA [Need new](https://www.linkedin.com/in/walker-harrison-11a36b6b/) | <a href="mailto:walker.harrison@duke.edu" title="email"><i class="fa fa-envelope"></i></a> &nbsp; <a href="https://github.com/WalkerHarrison" title="GitHub"><i class="fa fa-github"></i></a> &nbsp; <a href="https://twitter.com/WalkWearsCrocs" title="Twitter"><i class="fa fa-twitter"></i></a> | Tue 10:00 - 11:00 and 1:30-2:30 | Old Chem 211A
+| [Professor Amy Herring](https://stat.duke.edu/people/amy-h-herring)  <a href="mailto:amy.herring@duke.edu" title="email"><i class="fa fa-envelope"></i></a> &nbsp;  | Wed and Thurs 1:30-2:30pm | 208 Old Chemistry |
+[TA Alex Mang](https://stat.duke.edu/people/alexander-mang-0)  <a href="mailto:alexander.mang@duke.edu" title="email"><i class="fa fa-envelope"></i></a> &nbsp; | Wed 6:00 - 8:00 pm ??? | 211A Old Chemistry
+ [TA Lindsay Berry](https://lindsayberry.github.io)  <a href="mailto:lindsay.berry@duke.edu" title="email"><i class="fa fa-envelope"></i></a> &nbsp;  | Tue 1-2pm?? | 211A Old Chemistry
  
                   
 
 
 ### Materials
 
-You should have access to a laptop and bring it to every class, fully charged. Texts and readings will be assigned as needed.
+You should have access to a laptop and bring it to every class, fully charged. Texts and readings will be assigned as needed. Required software packages include R/RStudio (free) and Tableau (free for students).
 
 
 ### Topics and Important Dates
