--- a/decks/data/data_file.Rmd
+++ b/decks/data/data_file.Rmd
@@ -44,38 +44,39 @@ t <- test %>% html_table(fill = TRUE) # converts html to a list
 
 # Extracting the desired data
 # First view the data and determine what parts of the data we need
+# I recommend clicking on t in the environment to look at its structure more easily
 # head(t)
 
 # create an empty data frame to hold our data
-population_structure <- matrix(0, 230, 6)
+population_structure <- matrix(0, 231, 6)
 colnames(population_structure) <- c("country", "ps_0-14", "ps_15-24", "ps_25-54", "ps_55-64", "ps_65+")
 
 # filling the data frame
-for(i in 4:233){
+for(i in 1:231){
   # getting country
-  population_structure[i-3, 1] <- t[[i]][["X1"]][2]
+  population_structure[i, 1] <- t[[1]][i,1]
   # splitting based on category
-  levels <- strsplit(t[[i]][["X2"]][2], "\n")
+  levels <- strsplit(t[[1]][i,2], ")")
   for(j in 1:5){
     # obtaining the relevant sections of the data
     start <- regexpr(":",levels[[1]][j]) + 2
     end <- regexpr("%",levels[[1]][j]) - 1
-    population_structure[i-3, j+1] <- as.numeric(substr(levels[[1]][j], start, end))
+    population_structure[i, j+1] <- as.numeric(substr(levels[[1]][j], start, end))
   }
 }
 
 # Another Example
 test <- read_html("print_2091.html")
 t <- test %>% html_table(fill = TRUE)
-IM <- matrix(0, 233, 4)
+IM <- matrix(0, 231, 4)
 colnames(IM) <- c("country", "IM_total", "IM_male", "IM_female")
-for(i in 4:236){
-  IM[i-3, 1] <- t[[i]][["X1"]][2]
-  levels <- strsplit(t[[i]][["X2"]][2], "\n")
+for(i in 1:231){
+  IM[i, 1] <- t[[1]][i,1]
+  levels <- strsplit(t[[1]][i,2], "births")
   for(j in 1:3){
     start <- regexpr(":",levels[[1]][j]) + 2
     end <- regexpr("d",levels[[1]][j]) - 2
-    IM[i-3, j+1] <- as.numeric(substr(levels[[1]][j], start[1], end[1]))
+    IM[i, j+1] <- as.numeric(substr(levels[[1]][j], start[1], end[1]))
   }
 }
 ```
